# das-mil

./: .gitignore  Dockerfile  README.md  collect_trial_stats.ipynb  dataset.ipynb  docker-compose.yml  install.sh  install_cpu.sh  install_gpu.sh  install_gpu_cu113.sh  make_summary.py  mnist_visualisation.ipynb  pyproject.toml  requirements.txt  run.py  run.sh  run_agent_for_sweeps_cpu.sh  run_experiment.sh  run_sweep_cpu.sh  run_sweep_gpu.sh  run_trials_for_selected_model_gpu.sh  run_trials_for_selected_models_cpu.sh  start_remote_agents_cpu.sh  test.py  to_test.sh  train.ipynb  train.py  train_benchmark.ipynb  train_mnist.ipynb  train_mnist_bags.ipynb  train_one_hot.ipynb  train_one_hot_baseline.ipynb
conf/: config.yaml  our_sweep.yaml
conf/classifier/: linear.yaml
conf/dataset/: _camelyon17.yaml  _cptac_brca.yaml  _cptac_crc.yaml  _tcga_brca.yaml  _tcga_crc.yaml  camelyon16.yaml  default_mnist.yaml  mnist_bags.yaml  mnist_collage.yaml  one_hot_mnist_bags.yaml  one_hot_mnist_collage.yaml  tcga_brca.yaml
conf/experiment/: camelyon16.yaml  mnist_bags.yaml  mnist_collage.yaml  mnist_collage_inverse.yaml  one_hot_mnist_bags.yaml  one_hot_mnist_collage.yaml
conf/model/: abmil.yaml  (+29 more)
mil/: utils.py
notebooks/: collect_trial_stats.ipynb  dataset.ipynb  mnist_visualisation.ipynb  train.ipynb
scripts/: print_config.py  run.py  run.sh  run_agent_for_sweeps_cpu.sh  run_experiment.sh  run_sweep_cpu.sh  run_train.py  run_trials_for_selected_model_gpu.sh  run_trials_for_selected_models_cpu.sh  start_agents_gpu.sh  start_sweeps_cpu.py  test.py  to_test.sh  train.py
(+134 files in other folders)
