[tool.poetry]
name = "mil"
version = "0.1.0"
description = ""
authors = ["Georg Wölflein <georgw7777@gmail.com>"]
readme = "README.md"
packages = [{include = "mil"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"
scikit-image = "^0.19.3"
Pillow = "^9.4.0"
opencv-python = "^4.7.0.68"
torch = "^1.13.1"
torchvision = "^0.14.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
